[project]
name = "tokrelay"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
discord = [
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.1",
]
speed = [
    "orjson>=3.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
